--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl" dir="ltr">
   <head>
+    <link rel="style.css" href="/css/master.css">
     <meta charset="utf-8">
     <title></title>
   </head>
