--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="nl" dir="ltr">
+<html>
   <head>
-    <link rel="style.css" href="/css/master.css">
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Portofolio Berk Yildirim</h1> 
-  </body>
-</html>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="style.css">
+
+      </head>
+      <body>
+
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="Index.html">Home</a>
+          <a href="Overmij.html">Over mij</a>
+          <a href="Badges.html">Badges</a>
+          <a href="opdrachten.html">Opdrachten</a>
+        </div>
+
+        <div id="main">
+          <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+        </div>
+                <h1>Berk Yildirim</h1>
+                <h2>Portfolio</h2>
+        <script src="script.js"></script>
+
+      </body>
+    </html>
